# PlantEd

./: .gitignore  Pipfile  README.md  buildoptions.json  cli.py  cli.spec  mypy.ini  pyproject.toml  requirements-test.txt  requirements.txt  test-requirements.txt  tox.ini
.github/workflows/: lint.yml  publish.yml  test.yml  tests.yml
assets/: background.png~  background_moist.png~  blue_grain_bag.kra  chloroplast.png~  cloud.png~  danger_energy.png~  fast_speed.png~  green_thumb.png~  nitrogen.png~  pause.png~  root_deep.PNG~  root_lateral.PNG~  spraycan.png~  spraycan_active.png~  stomata_open.png~  sun_face_1.png~  sun_facees.kra  sun_wip.kra
assets/bean_growth/: 0.PNG~  bean_0.png~  bean_1.png~  bean_2.png~
assets/bee/: hive.png~
assets/menu/: dev.jpg~
logs/15.11.21 1400/: gamespeed.txt  gametime.txt  growth.txt  nitrate.txt  water.txt
logs/15.11.21 1600/: gamespeed.txt  gametime.txt  growth.txt  nitrate.txt  starch.txt  water.txt
logs/2021-11-17 16.05.10Generic Plant/: gametime.txt  growth.txt  nitrate.txt  root_mass.txt  starch_pool.txt  water.txt
logs/2021-11-17 16.12.49Generic Plant/: gamespeed.txt  gametime.txt  growth.txt  leaf_mass.txt  nitrate.txt  root_mass.txt  starch_pool.txt  water.txt
logs/2021-11-17 18.19.22Generic Plant/: gamespeed.txt  gametime.txt  growth.txt  leaf_mass.txt  nitrate.txt  root_mass.txt  starch_pool.txt  water.txt
logs/2021-11-17 18.20.31Generic Plant/: gamespeed.txt  gametime.txt  growth.txt  leaf_mass.txt  nitrate.txt  root_mass.txt  starch_pool.txt  (+1 more)
src/: example_request_response
tests/: dict2obj.py  run_dynamic_model.py  temp_client.py  temp_server.py  test_SimWeatherSmall.py  test_client.py  test_dynamic_model.py  test_environment.py  test_leaf.py  test_metabolite_grid.py  test_plant.py  test_server.py  test_server_container.py  test_slider.py  test_starch.py  test_water.py  test_weather.py  test_weather_state.py
utils/: spline.py
(+306 files in other folders)
