[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "PlantEd"
version = "0.0.1"
description = "Server Client Application of the game PlantEd"
readme = "README.md"
requires-python = ">=3.10"

# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

dependencies = [
  "numpy",
  "cobra",
  "sympy",
  "websockets",
  "dataclasses-json",
  "pygame",
  "scipy",
  "matplotlib",
  "requests",
]

[project.urls]
homepage = "https://github.com/NAMlab/PlantEd"
repository = "https://github.com/NAMlab/PlantEd"

[project.scripts]
PlantEd_Server = "PlantEd.server:main"

[tool.setuptools]
package-dir = {"" = "src"}


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mypkg = ["*.PNG", "*.mp3", "*.png", "JPG", "jpg"]